# AirSim-Onboard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh
Rosie/linux/: CMakeLists.txt
Rosie/linux/OnboardLib/: CMakeLists.txt
Rosie/linux/OnboardLib/include/vehicles/multirotor/: OnboardMultiRotor.hpp
Rosie/linux/OnboardLib/include/vehicles/multirotor/controllers/: OnboardDroneController.hpp
Rosie/linux/OnboardLib/include/vehicles/multirotor/firmwares/dji/: OnboardMultirotorApi.hpp
Rosie/linux/OnboardServer/: CMakeLists.txt  main.cpp
Rosie/linux/common/: dji_linux_environment.cpp  dji_linux_environment.hpp  dji_linux_helpers.cpp  dji_linux_helpers.hpp
