cmake_minimum_required(VERSION 3.5.0)
project(rosie-linux)

set(CMAKE_VERBOSE_MAKEFILE ON)

if(NOT ROSIE_ONBOARDSDK_SOURCE)
    set(ROSIE_ONBOARDSDK_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/../../Onboard-SDK/osdk-core")
endif()

if(NOT ROSIE_AIRSIM_SOURCE)
    set(ROSIE_AIRSIM_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/../../AirSim")
endif()


set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/output/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

add_subdirectory(OnboardLib)
add_subdirectory(OnboardServer)
